  * mk-sbuild-lv: Really use -security for SOURCES_SECURITY_SUITE in Ubuntu

  [ Kumar Appaiah ]
  * submittodebian: if patch is relatively small (shorter than fifty
    lines), display it inline instead of attaching to the report.

  [ Michael Bienia ]
  * ubuntutools/requestsync/common.py: convert the changelog into a unicode
    string (lp: #498349)

 -- Michael Bienia <geser@ubuntu.com>  Sun, 20 Dec 2009 14:08:31 +0100

ubuntu-dev-tools (0.85) lucid; urgency=low

  * submittodebian: switch to use lucid as the default distro tag.
  * submittodebian: if the package is in bzr, look for bzr metadata first
    before looking for a previous package revision in the parent dir.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Fri, 11 Dec 2009 13:46:31 -0800

ubuntu-dev-tools (0.84) lucid; urgency=low

  [ Michael Bienia ]
  * update-maintainer: Remove the check for LP credentials again as this
    script doesn't use the LP API (Closes: #558598).
  * Rename buildd to ubuntu-build to resolve filename conflict
    (Closes: #558816).

  [ Manny Vindiola ]
  * grab-merge: Only download files listed multiple times in REPORT once

  [ Luca Falavigna ]
  * ubuntutools/lp/lpapicache.py: recent lazr.restfulclient does use of
    unicode strings, use basestring to catch bot str and unicode.
  * Depend on python-lazr.restfulclient, package was recently renamed
    from python-lazr-restfulclient to match Python naming schema.

  [ Jonathan Davies ]
  * dch-repeat: Added Lucid to releases.

 -- Luca Falavigna <dktrkranz@ubuntu.com>  Mon, 07 Dec 2009 10:18:55 +0100

ubuntu-dev-tools (0.83) lucid; urgency=low

  [ Iain Lane ]
  * lpapicache: Do not immediately bail out if we have no credentials to
    login. Clients are now expected to handle the lack of credentials
    themselves.
  * pull-lp-source: Make LP API use optional - fall back to a hardcoded
    default release if we aren't using it. (LP: #477670)
  * pull-lp-source: Detect more failure conditions and give a nice error